# yammm

./: .envrc  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  justfile  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci-release-dry-run.yml  ci.yml  release.yml  scheduled.yml
docs/: README.md  USAGE.md  microsoft-auth-setup.md
docs/specs/: architecture.md  caching.md  cli.md  config.md  conventions.md  deps.md  errors.md  json-output.md  launch.md  services.md  storage.md
e2e/: Cargo.toml
e2e/src/: main.rs  matrix.rs  report.rs  runner.rs  tui.rs
nix/modules/: devshell.nix  overlay.nix  pre-commit.nix  rust.nix
src/: app.rs  cli.rs  lib.rs  output.rs  test_util.rs
src/api/: adoptium.rs  curseforge.rs  error.rs  forge.rs  github.rs  http_cache.rs  loader.rs  minecraft.rs  mod.rs  modrinth.rs  neoforge.rs  retry.rs  streaming.rs
src/api/installer/: libraries.rs  mod.rs  processors.rs  profile.rs  templates.rs
src/auth/: microsoft.rs  minecraft.rs  mod.rs  xbox.rs
src/commands/: auth.rs  cache.rs  completions.rs  config.rs  import.rs  info.rs  init.rs  mod.rs  remove.rs  search.rs  self_update.rs  update.rs
src/commands/add/: mod.rs
src/commands/add/sources/: mod.rs
src/commands/export/: mod.rs  mrpack.rs
src/commands/import/: helpers.rs  mod.rs  mrpack.rs  resolve.rs  ympk.rs
src/commands/launch/: client.rs  java.rs  libraries.rs  loader.rs  mod.rs  prepare.rs  server.rs  vfs.rs
src/commands/manage/: app.rs  deps.rs  mod.rs  render.rs  tui.rs
src/commands/manage/app/: actions.rs  input.rs  mod.rs
src/commands/manage/render/: dep_tree.rs  detail.rs  help.rs  help_overlay.rs  mod.rs  modlist.rs
src/commands/organize/: app.rs  mod.rs  tui.rs
src/config/: global.rs  mod.rs  modpack.rs
src/errors/: kinds.rs  mod.rs
src/providers/: curseforge.rs  error.rs  mock.rs  mod.rs  modrinth.rs  provider.rs  registry.rs  url.rs
src/services/: connector.rs  dep_graph.rs  deps_install.rs  download.rs  mod.rs  mod_install.rs  resolver.rs
src/storage/: cache.rs  cache_manager.rs  entry_store.rs  mod.rs  modpack.rs
src/types/: filters.rs  hash_type.rs  loader.rs  mod.rs  mod_info.rs  version.rs
src/types/mod_info/: dependency.rs  env.rs  info.rs  mod.rs  project_type.rs  source.rs  tracked.rs
src/utils/: format.rs  fs.rs  java.rs  maven.rs  mod.rs  slug.rs
tests/: command_flows.rs  integration_tests.rs
wix/: main.wxs
