[package]
name = "yammm-e2e"
version.workspace = true
edition = "2021"
description = "End-to-end test runner for yammm server launch"
authors = ["Conquerix <conquerix@shulker.link>"]

[package.metadata.dist]
dist = false

[package.metadata.wix]
upgrade-guid = "F1BB9ABC-191E-4840-9F74-67966481B8CE"
path-guid = "6EC4D0E1-1F97-478F-98C9-35C4AD6A2E62"
license = false
eula = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
console = "0.15"
indicatif = "0.17"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "1"
ratatui = "0.29"
crossterm = "0.28"
ctrlc = "3"
